[package]
name = "rust-todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
envy = "0.4.2"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
validator = { version = "0.16.1", features = ["derive"] }
